# HW_libraries_corrected

./: .gitignore
Work3/: CMakeLists.txt
Work3/Work2/: Main.cpp
Work3/Work2DLL/: dinamic_lib.h  dllmain.cpp
Work4/: Work4.sln
Work4/Main/: Main.vcxproj
Work4/Work/: Main.cpp  Work.vcxproj
Work4/Work4/: Equilateral.h  Isosceles.h  Parallelogram.h  Quadrilateral.h  Rectangle.h  Rhomb.h  Right.h  Square.h  Triangle.h  Work4.vcxproj  Work4.vcxproj.filters  macros_API.h
Work5/: CMakeLists.txt
Work5/Work/: Main.cpp
Work5/Work4/: Equilateral.h  Parallelogram.h  Rectangle.h  Rhomb.h  Square.h
